# forge

./: README.md  pyproject.toml
src/forge/: __init__.py
src/forge/.forge/: config.yaml
src/forge/cli/: __init__.py  describe_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  main.py  remove_cmd.py  setup_cmd.py  update_cmd.py
src/forge/core/: __init__.py  bundle_sync.py  describe.py  install.py  list_items.py  models.py  project.py  registry.py  registry_init.py  remove.py  setup.py  setup_catalog.py  update.py  validation.py
tests/: conftest.py  test_bundle_tracking.py  test_init_cmd.py  test_install.py  test_list_cmd.py  test_list_items.py  test_models.py  test_project.py  test_registry.py  test_registry_init.py  test_remove.py  test_setup.py  test_validation.py
